2.2.3/_sources/gallery/images_contours_and_fields/contour_image.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_contour_image.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_contour_image.py:


=============
Contour Image
=============

Test combinations of contouring, filled contouring, and image plotting.
For contour labelling, see also the :doc:`contour demo example
</gallery/images_contours_and_fields/contour_demo>`.

The emphasis in this demo is on showing how to make contours register
correctly on images, and on how to get both of them oriented as desired.
In particular, note the usage of the :doc:`"origin" and "extent"
</tutorials/intermediate/imshow_extent>` keyword arguments to imshow and
contour.



.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib import cm

    # Default delta is large because that makes it fast, and it illustrates
    # the correct registration between image and contours.
    delta = 0.5

    extent = (-3, 4, -4, 3)

    x = np.arange(-3.0, 4.001, delta)
    y = np.arange(-4.0, 3.001, delta)
    X, Y = np.meshgrid(x, y)
    Z1 = np.exp(-X**2 - Y**2)
    Z2 = np.exp(-(X - 1)**2 - (Y - 1)**2)
    Z = (Z1 - Z2) * 2

    # Boost the upper limit to avoid truncation errors.
    levels = np.arange(-2.0, 1.601, 0.4)

    norm = cm.colors.Normalize(vmax=abs(Z).max(), vmin=-abs(Z).max())
    cmap = cm.PRGn

    fig, _axs = plt.subplots(nrows=2, ncols=2)
    fig.subplots_adjust(hspace=0.3)
    axs = _axs.flatten()

    cset1 = axs[0].contourf(X, Y, Z, levels, norm=norm,
                         cmap=cm.get_cmap(cmap, len(levels) - 1))
    # It is not necessary, but for the colormap, we need only the
    # number of levels minus 1.  To avoid discretization error, use
    # either this number or a large number such as the default (256).

    # If we want lines as well as filled regions, we need to call
    # contour separately; don't try to change the edgecolor or edgewidth
    # of the polygons in the collections returned by contourf.
    # Use levels output from previous call to guarantee they are the same.

    cset2 = axs[0].contour(X, Y, Z, cset1.levels, colors='k')

    # We don't really need dashed contour lines to indicate negative
    # regions, so let's turn them off.

    for c in cset2.collections:
        c.set_linestyle('solid')

    # It is easier here to make a separate call to contour than
    # to set up an array of colors and linewidths.
    # We are making a thick green line as a zero contour.
    # Specify the zero level as a tuple with only 0 in it.

    cset3 = axs[0].contour(X, Y, Z, (0,), colors='g', linewidths=2)
    axs[0].set_title('Filled contours')
    fig.colorbar(cset1, ax=axs[0])


    axs[1].imshow(Z, extent=extent, cmap=cmap, norm=norm)
    axs[1].contour(Z, levels, colors='k', origin='upper', extent=extent)
    axs[1].set_title("Image, origin 'upper'")

    axs[2].imshow(Z, origin='lower', extent=extent, cmap=cmap, norm=norm)
    axs[2].contour(Z, levels, colors='k', origin='lower', extent=extent)
    axs[2].set_title("Image, origin 'lower'")

    # We will use the interpolation "nearest" here to show the actual
    # image pixels.
    # Note that the contour lines don't extend to the edge of the box.
    # This is intentional. The Z values are defined at the center of each
    # image pixel (each color block on the following subplot), so the
    # domain that is contoured does not extend beyond these pixel centers.
    im = axs[3].imshow(Z, interpolation='nearest', extent=extent,
                    cmap=cmap, norm=norm)
    axs[3].contour(Z, levels, colors='k', origin='image', extent=extent)
    ylim = axs[3].get_ylim()
    axs[3].set_ylim(ylim[::-1])
    axs[3].set_title("Origin from rc, reversed y-axis")
    fig.colorbar(im, ax=axs[3])

    fig.tight_layout()
    plt.show()





.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_image_001.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions, methods and classes is shown
in this example:



.. code-block:: python


    import matplotlib
    matplotlib.axes.Axes.contour
    matplotlib.pyplot.contour
    matplotlib.axes.Axes.imshow
    matplotlib.pyplot.imshow
    matplotlib.figure.Figure.colorbar
    matplotlib.pyplot.colorbar
    matplotlib.colors.Normalize







.. _sphx_glr_download_gallery_images_contours_and_fields_contour_image.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: contour_image.py <contour_image.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: contour_image.ipynb <contour_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
